--- a/public/index.html
+++ b/public/index.html
@@ -112,8 +112,8 @@
     made by bubey
 </footer>
 
-<script src="js/nav.js"></script>
-<script src="js/home.js"></script>
+<script src="js/nav.js" async></script>
+<script src="js/home.js" async ></script>
 
 </body>
 </html>
