--- a/public/index.html
+++ b/public/index.html
@@ -8,8 +8,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@400..900&family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap" rel="stylesheet">
-    <link rel="preload" href="path/to/font.woff2" as="font" type="font/woff2" crossorigin="anonymous">
-    <link rel="preload" href="css/style.css" as="style">>
+    
+
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <!-- navbar -->
@@ -23,7 +24,7 @@
     
     <!-- best selling products -->
     <section class="best-seller">
-        <h1 class="section-title"> best selling products </h1>
+        <h1 class="section-title"> best selling product </h1>
         <div class="product-container">
             <div class="product-card">
                 <img src="img/product-1.png" class="product-image" alt="">
